Rename main file from worker.js to workers.js

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "npm-cdn-worker"
 compatibility_date = "2025-11-18"
-main = "worker.js"
+main = "workers.js"
 
 kv_namespaces = [
   { binding = "NPM_CACHE", id = "9a7e02d421354c6baa94800ece1e4eeb" }
